se agrega ejemplo 2, prompt 1

--- a/tutorial regex.ipynb
+++ b/tutorial regex.ipynb
@@ -145,12 +145,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70fdacf1",
+   "cell_type": "markdown",
+   "id": "a4664b7c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ejemplo 2: Nombres y Apellidos\n",
+    "\n",
+    "### Prompt 1:  \n",
+    "\n",
+    "**Actúa como un generador de expresiones regulares para patrones específicos. Debes proporcionarlas en un formato fácil de copiar y pegar en un editor o lenguaje compatible. Ahora, proporciona una expresión regular para extraer nombres y apellidos.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6020878d",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<span style=\"color:green;\">ChatGPT:\n",
+    "```python\n",
+    "[A-Z][a-z]+\\s[A-Z][a-z]+\n",
+    "```    \n",
+    "<details>    \n",
+    "Esta expresión regular busca coincidencias de la siguiente manera:\n",
+    "\n",
+    "[A-Z]: Busca una letra mayúscula al principio de la palabra.\n",
+    "\n",
+    "[a-z]+: Busca una o más letras minúsculas después de la primera letra mayúscula para capturar el nombre.\n",
+    "\n",
+    "\\s: Busca un espacio entre el nombre y el apellido.\n",
+    "\n",
+    "[A-Z]: Busca otra letra mayúscula para el comienzo del apellido.\n",
+    "\n",
+    "[a-z]+: Busca una o más letras minúsculas después de la primera letra mayúscula del apellido.\n",
+    "</details> \n",
+    "    \n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c83c1f69",
+   "metadata": {},
+   "source": [
+    "Al revisar nuestra expresión regular para buscar nombres como **'Juan Perez'** y **'José Ramirez'** utilizando [regex](https://regex101.com/), notamos que no muestra los nombres que llevan tilde. Para mejorar esto, vamos a fortalecer nuestra instrucción para que sea más efectiva."
+   ]
   }
  ],
  "metadata": {
