--- a/tutorial regex.ipynb
+++ b/tutorial regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0b83419f",
+   "id": "e7794ab4",
    "metadata": {},
    "source": [
     "# Tutorial de *'prompting'* efectivos para Expresiones Regulares"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ccb9116",
+   "id": "6b399021",
    "metadata": {},
    "source": [
     "## 1. Introducción\n",
-    "¿Alguna vez te has encontrado buscando o manipulando texto de manera repetitiva y tediosa? ¡No busques más!. En este tutorial, combinarás expresiones regulares y el modelo GPT-3.5 en Jupyter Notebook para crear prompots efectivos. Aprenderás a guiar la generación de respuestas del modelo utilizando expresiones regulares, lo que te permitirá construir chatbots y sistemas de procesamiento de texto precisos."
+    "¿Alguna vez te has encontrado buscando o manipulando texto de manera repetitiva y tediosa? ¡No busques más!. En este tutorial, combinarás expresiones regulares y el modelo GPT-3.5 en Jupyter Notebook para crear prompts efectivos. Aprenderás a guiar la generación de respuestas del modelo utilizando expresiones regulares, lo que te permitirá construir chatbots y sistemas de procesamiento de texto precisos."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac642862-da1a-4994-bb88-cde83cab44fa",
+   "id": "5c1cfb0f",
    "metadata": {},
    "source": [
     "## 2. Expresiones regulares\n",
@@ -42,12 +42,14 @@
     "| `+?`                    | Coincide con el elemento anterior una o más veces, pero el menor número de veces posible. |\n",
     "| `??`                    | Empata con el elemento anterior cero o una vez, pero el menor número de veces posible. |\n",
     "| `[aeiou]`               | Empata con un solo carácter siempre que ese carácter esté en el conjunto especificado. |\n",
-    "| `[a-z0-9]`              | Se pueden especificar rangos de caracteres con el signo menos. Este ejemplo es un carácter único que debe ser una letra minúscula o un dígito. |\n"
+    "| `[a-z0-9]`              | Se pueden especificar rangos de caracteres con el signo menos. Este ejemplo es un carácter único que debe ser una letra minúscula o un dígito. |\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d931ba0",
+   "id": "89bef4af",
    "metadata": {},
    "source": [
     "## 3. ¿Qué es un Prompting?\n",
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "352610c7",
+   "id": "c254fb81",
    "metadata": {},
    "source": [
     "### Ejemplo 1. Fechas\n",
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c085fc1",
+   "id": "a9d24859",
    "metadata": {},
    "source": [
     "---\n",
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e8423a8",
+   "id": "f311f279",
    "metadata": {},
    "source": [
     "Al revisar nuestra expresión regular para buscar fechas utilizando [regex](https://regex101.com/), notamos que solo identifica fechas en el formato \"dd/mm/aaaa\". Vamos a mejorar nuestra expresión para hacerla más precisa y abarcativa."
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad941d6",
+   "id": "35977730",
    "metadata": {},
    "source": [
     "### Prompt 2:\n",
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c65e62",
+   "id": "c6c895e0",
    "metadata": {},
    "source": [
     "---\n",
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7e4898",
+   "id": "cb1103bd",
    "metadata": {},
    "source": [
     "¡Te invito a explorar la página [regex](https://regex101.com/)! Estamos usando un patrón que reconoce fechas. Puede identificar días y años con uno o más dígitos, y las fechas pueden estar separadas por guiones, puntos o barras. "
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4664b7c",
+   "id": "68fb87e8",
    "metadata": {},
    "source": [
     "### Ejemplo 2: Nombres y Apellidos\n",
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6020878d",
+   "id": "6773655f",
    "metadata": {},
    "source": [
     "---\n",
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83c1f69",
+   "id": "0264d014",
    "metadata": {},
    "source": [
     "Al revisar nuestra expresión regular para buscar nombres como **'Juan Perez'** y **'José Ramirez'** utilizando [regex](https://regex101.com/), notamos que no muestra los nombres que llevan tilde. Para mejorar esto, vamos a fortalecer nuestra instrucción para que sea más efectiva."
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11084d5e-ad27-47e8-abc8-20f675596f13",
+   "id": "d47d2eb6",
    "metadata": {},
    "source": [
     "### Prompt 2:\n",
@@ -203,31 +205,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09cfaf3d-fc29-4d56-9b59-b2c99a01c46a",
+   "id": "63b7247f",
    "metadata": {},
    "source": [
     "---\n",
     "<span style=\"color:green;\">ChatGPT:\n",
     "```python\n",
     "[\\p{L}áéíóúüñÁÉÍÓÚÜÑ']+ [\\p{L}áéíóúüñÁÉÍÓÚÜÑ']+\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "56c0c722-49d5-4c52-beb8-c665c0df20d8",
-   "metadata": {},
-   "source": [
-    "¡Mira en la página [regex](https://regex101.com/)! El patrón incluye todos los nombres, hasta los con ñ, tildes y diéresis. ¡Es genial cómo funciona con caracteres especiales en los nombres!\n",
-    "\n",
-    "Ahora, vamos a usar un archivo de Excel como nuestra base de datos para probar cómo nuestro patrón encuentra nombres y apellidos de la mejor manera.\n",
-    "\n",
+    "```  \n",
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d76e2fc0",
+   "id": "204cedc8",
+   "metadata": {},
+   "source": [
+    "¡Mira en la página [regex](https://regex101.com/)! El patrón incluye todos los nombres, hasta los con ñ, tildes y diéresis. ¡Es genial cómo funciona con caracteres especiales en los nombres!\n",
+    "\n",
+    "Ahora, vamos a usar un archivo de Excel como nuestra base de datos para probar cómo nuestro patrón encuentra nombres y apellidos de la mejor manera."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc9ae26e",
    "metadata": {},
    "source": [
     "### Prompt 3:\n",
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ae897d",
+   "id": "711cb0e4",
    "metadata": {},
    "source": [
     "---\n",
@@ -247,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb886bbd",
+   "id": "c785f67f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +270,7 @@
     "apellidos_extraidos = nombres_completos.apply(extraer_apellidos)\n",
     "\n",
     "# Imprimir apellidos extraídos\n",
-    "print(\"Los apellidos extraidos son:\\n\")\n",
+    "print(\"Los apellidos extraídos son:\")\n",
     "for apellidos in apellidos_extraidos:\n",
     "    print(apellidos)"
    ]
@@ -291,7 +292,6 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
    "version": "3.9.13"
   }
  },
