Agregando ejemplo 3, prompt 1

--- a/tutorial regex.ipynb
+++ b/tutorial regex.ipynb
@@ -274,6 +274,58 @@
     "for apellidos in apellidos_extraidos:\n",
     "    print(apellidos)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83531e23-e980-4f1a-bb2b-a0f1d92e451a",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fc5d836-5dc1-4c9f-bc94-ea1e1ad3e0c8",
+   "metadata": {},
+   "source": [
+    "### Ejemplo 3: Rutas de directorio\n",
+    "\n",
+    "### Prompt 1:\n",
+    "\n",
+    "**Actúa como un generador de expresiones regulares. Ahora proporciona una expresión regular para capturar rutas de directorio válidas en un sistema de archivos.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df60afe6-4a54-4a4b-b6f6-37261bfb3909",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<span style=\"color:green;\">ChatGPT:\n",
+    "```python\n",
+    "^\\/?([\\w.-]+\\/?)+$\n",
+    "```    \n",
+    "<details>  \n",
+    "\n",
+    "^: Coincide con el inicio de la cadena.\n",
+    "\n",
+    "\\/?: Corresponde a una barra diagonal (/) opcional (?). Esta barra es escapada (\\/) para que se interprete literalmente.\n",
+    "\n",
+    "([\\w.-]+\\/?)+: Este grupo captura uno o más nombres de directorios.\n",
+    "\n",
+    "$: Coincide con el final de la cadena.\n",
+    "</details>   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ff926d6-1e62-4c94-969c-2a31bd41ee5d",
+   "metadata": {},
+   "source": [
+    "Al revisar nuestra expresión regular para encontrar rutas como D:\\Users\\ana\\file.pdf utilizando [regex](https://regex101.com/), notamos que no reconoce las rutas de directorio en Windows. Para mejorar esto, vamos a reforzar nuestra instrucción para que funcione de manera más efectiva.\n",
+    "\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
@@ -292,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
