se agrega prompt 2

--- a/tutorial regex.ipynb
+++ b/tutorial regex.ipynb
@@ -326,6 +326,46 @@
     "\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "530c39fc",
+   "metadata": {},
+   "source": [
+    "### Prompt 2:\n",
+    "\n",
+    "**Proporciona una expresion regular para poder extraer rutas de directorio en sistemas Windows y Unix, que se encuentre en un solo patrón. Ten en cuenta el escape en el delimitador.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "185ebad9",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<span style=\"color:green;\">ChatGPT:\n",
+    "```python\n",
+    "^((?:\\/|\\w:)[\\\\\\/\\w.-]+)*[\\\\\\/\\w.-]+$\n",
+    "```    \n",
+    "<details>  \n",
+    "\n",
+    "- Comienza con el separador de ruta de Unix / o una letra de unidad seguida de : en el caso de Windows (como C: o D:).\n",
+    "    \n",
+    "- Seguido por uno o más grupos de caracteres que pueden incluir barras diagonales /, barras invertidas \\, caracteres alfanuméricos (\\w), puntos (.) y guiones (-), que representan nombres de archivos o directorios.\n",
+    "\n",
+    "- Termina con un grupo final de caracteres similar al grupo anterior, permitiendo una ruta final válida.\n",
+    "</details>   \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0492382b",
+   "metadata": {},
+   "source": [
+    "¡Echa un vistazo a la página [regex](https://regex101.com/)! El patrón que estamos usando incluye las rutas de directorio tanto en sistemas Windows como Unix. Vamos a utilizar el mismo archivo de Excel como nuestra base de datos para ver cómo nuestro patrón encuentra ambas rutas."
+   ]
   }
  ],
  "metadata": {
@@ -344,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
